CPL/Tema3/tema3-tests/attributes-overload.lcpl.err
Exception in thread "main" java.lang.NullPointerException
	at ro.pub.cs.lcpl.BaseDispatch.emitIR(BaseDispatch.java:166)
	at ro.pub.cs.lcpl.Dispatch.emitIR(Dispatch.java:19)
	at ro.pub.cs.lcpl.Block.emitIR(Block.java:28)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.LocalDefinition.emitIR(LocalDefinition.java:98)
	at ro.pub.cs.lcpl.Block.emitIR(Block.java:28)
	at ro.pub.cs.lcpl.IfStatement.emitIR(IfStatement.java:57)
	at ro.pub.cs.lcpl.Program.emitIR(Program.java:267)
	at LCPLCodeGen.main(LCPLCodeGen.java:23)
llc: attributes-overload.lcpl.ir:313:1: error: found end of file when expecting more instructions

^
clang: error: no such file or directory: 'attributes-overload.lcpl.ir.s'
./eval.sh: line 27: ./attributes-overload: No such file or directory
rm: cannot remove `attributes-overload': No such file or directory
